tests/compile-fail/integration__integration__mapfiles__intrinsic_has_extra_arg.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic AssignOp(=,int): unexpected dword integer arg at index 3
  ┌─ <mapfile-1>:3:4
  │
3 │ 99 AssignOp(=,int)
  │    ^^^^^^^^^^^^^^^ intrinsic defined here
4 │ !ins_signatures
5 │ 99 SSS
  │    ^^^ signature defined here


